--- a/index.html
+++ b/index.html
@@ -181,15 +181,9 @@
 <footer>
     <div class="container">
         <div class="footer_menu">
-            <div class="fm_1">
-                ...
-            </div>
-            <div class="fm_2">
-                ...
-            </div>
-            <div class="fm_3">
-                ...
-            </div>
+            <div class="fm_1">...</div>
+            <div class="fm_2">...</div>
+            <div class="fm_3">...</div>
         </div>
     </div>
 </footer>
